data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_288.wast
;; 9. **Test adding `nop` instruction at various points within a `loop` followed by `br_if` depending on stack values**:    - **Constraint**: Check that `nop` does not affect stack value evaluations crucial for loop control.    - **Relation to Infinite Loops**: If `nop` alters stack evaluations, `br_if` may fail, causing infinite loops.

(assert_invalid
  (module
    (func $test-loop-nop (param i32) (result i32)
      loop (result i32)
        nop
        local.get 0
        i32.const 1
        i32.sub
        local.set 0
        local.get 0
        i32.const 0
        br_if 0
      end
    )
  )
  "type mismatch"
)